tests/samples/negative/types/tuple_field_named_access.ax
module tuple_field_named_access;

fn main() -> i32 {
    let pair = (1, false);
    return pair.first;
}
